Ajout de texte et ajout de style

--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
     <section class="presentation">
         <div class="container">
             <h2>Qui sommes-nous ?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, nisi vel consectetur.</p>
+            <p>L'association s'engage à défendre les intérêts moraux et matériels des personnes
+                en situation de handicap. <br>
+                Rassembler, soutenir et aider les personnes handicapées ainsi que leurs familles
+                en les accompagnant vers l'autonomie. <br>
+                Veiller à une accessibilité optimale de l'offre d'accompagnement par une coordination
+                territoriale des structures de proximité. <br>
+                Cultiver un esprit de bienveillance.
+            </p>
         </div>
     </section>
 
@@ -46,12 +53,29 @@
             <h2>Nos services</h2>
             <div class="service-grid">
                 <div class="service">
-                    <h3>Service 1</h3>
-                    <p>Description du service 1.</p>
+                    <h3>Pôle Administratif</h3>
+                    <p>Ce service a pour principale mission d'assurer le bon fonctionnement de l'association
+                        en coordonnant les différents établissements et services. <br>
+                        Il est un réel support administratif qui intervient dans divers domaines, de gestion
+                        administratives et comptables, ressources humaines, communication... <br>
+                        Divers professionnels qualifiés composent ce service.
+                    </p>
                 </div>
                 <div class="service">
-                    <h3>Service 2</h3>
-                    <p>Description du service 2.</p>
+                    <h3>Pôle Social</h3>
+                    <p>Le pôle social a été créé en février 2013. Il se concentre principalement
+                        sur deux services essentiels :
+                        <ul>
+                            <li>Service d'Accompagnement à la Vie Sociale (S.A.V.S.) : Ce service
+                                vise à aider les adultes handicapés à retrouver leur autonomie et à 
+                                s'intégrer pleinement en tant que citoyens.
+                            </li>
+                            <li>Résidence d'Accueil : Ce type de résidence sociale offre un cadre de 
+                                vie semi-collectif, favorisant la convivialité et l'intégration dans 
+                                l'environnement social.
+                            </li>
+                        </ul>
+                    </p>
                 </div>
                 <div class="service">
                     <h3>Service 3</h3>
