--- a/index.html
+++ b/index.html
@@ -78,8 +78,22 @@
                     </p>
                 </div>
                 <div class="service">
-                    <h3>Service 3</h3>
-                    <p>Description du service 3.</p>
+                    <h3>Pôle Travail</h3>
+                    <p>Le pôle travail est dédié à l'accompagnement des personnes en situation de handicap
+                        vers et dans l'emploi. Il propose :
+                        <ul>
+                            <li>Établissement et Service d'Aide par le Travail (ESAT) : visent à insérer
+                                socialement et professionnellement les adultes handicapées dont les capacités 
+                                de travail ne permettent pas de travailler dans une entreprise ordinaire.
+                            </li>
+                            <li>Entreprise Adaptée : C'est une entreprise qui a la particularité d'accompagner
+                                des personnes en situation de handicap dans un environnement adapté à leurs possibilités.
+                            </li>
+                            <li>Service Emploi Accompagné : Ce dispositif offre un soutien et un accompagnement
+                                aux personnes pour obtenir et conserver un emploi. Il sert également d'appuiaux entreprises.
+                            </li>
+                        </ul>
+                    </p>
                 </div>
             </div>
         </div>
