Ajout de balise strong

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <p>Le pôle social a été créé en février 2013. Il se concentre principalement
                         sur deux services essentiels :
                         <ul>
-                            <li>Service d'Accompagnement à la Vie Sociale (S.A.V.S.) : Ce service
+                            <li><strong>Service d'Accompagnement à la Vie Sociale (S.A.V.S.) : </strong>Ce service
                                 vise à aider les adultes handicapés à retrouver leur autonomie et à 
                                 s'intégrer pleinement en tant que citoyens.
                             </li>
-                            <li>Résidence d'Accueil : Ce type de résidence sociale offre un cadre de 
+                            <li><strong>Résidence d'Accueil : </strong>Ce type de résidence sociale offre un cadre de 
                                 vie semi-collectif, favorisant la convivialité et l'intégration dans 
                                 l'environnement social.
                             </li>
@@ -83,14 +83,14 @@
                     <p>Le pôle travail est dédié à l'accompagnement des personnes en situation de handicap
                         vers et dans l'emploi. Il propose :
                         <ul>
-                            <li>Établissement et Service d'Aide par le Travail (ESAT) : visent à insérer
+                            <li><strong>Établissement et Service d'Aide par le Travail (ESAT) : </strong>visent à insérer
                                 socialement et professionnellement les adultes handicapées dont les capacités 
                                 de travail ne permettent pas de travailler dans une entreprise ordinaire.
                             </li>
-                            <li>Entreprise Adaptée : C'est une entreprise qui a la particularité d'accompagner
+                            <li><strong>Entreprise Adaptée : </strong>C'est une entreprise qui a la particularité d'accompagner
                                 des personnes en situation de handicap dans un environnement adapté à leurs possibilités.
                             </li>
-                            <li>Service Emploi Accompagné : Ce dispositif offre un soutien et un accompagnement
+                            <li><strong>Service Emploi Accompagné : </strong>Ce dispositif offre un soutien et un accompagnement
                                 aux personnes pour obtenir et conserver un emploi. Il sert également d'appuiaux entreprises.
                             </li>
                         </ul>
@@ -115,9 +115,6 @@
             <p>&copy; 2025 APATPH. Tous droits réservés.</p>
         </div>
     </footer>
-
-</body>
-</html>
 
 </body>
 </html>
