Création de la page de présentation de l'association et mise en fonction du bouton en savoir plus

--- a/accueil.html
+++ b/accueil.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="#">Accueil</a></li>
-                    <li><a href="#">À propos</a></li>
+                    <li><a href="#">Qui sommes-nous</a></li>
                     <li><a href="#">Nos Services</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -30,7 +30,7 @@
         <div class="container">
             <h2>Bienvenue sur l'APATPH</h2>
             <p>Association pour l’Accompagnement des Travailleurs en Situation de Handicap.</p>
-            <a href="#" class="btn">En savoir plus</a>
+            <a href="association.html" class="btn">En savoir plus</a>
         </div>
     </section>
 
@@ -96,7 +96,7 @@
                                 des personnes en situation de handicap dans un environnement adapté à leurs possibilités.
                             </li>
                             <li><strong>Service Emploi Accompagné : </strong>Ce dispositif offre un soutien et un accompagnement
-                                aux personnes pour obtenir et conserver un emploi. Il sert également d'appuiaux entreprises.
+                                aux personnes pour obtenir et conserver un emploi. Il sert également d'appui aux entreprises.
                             </li>
                         </ul>
                     </p>
