Enregistrement des dernières modifications

--- a/Services/administratif.html
+++ b/Services/administratif.html
@@ -30,7 +30,7 @@
 
     <section class="intro">
       <p>
-        Le Pôle Administratif assure la gestion quotidienne de l’association : ressources humaines, gestion financière, suivi administratif et juridique.
+        Le Pôle Administratif assure la gestion quotidienne de l’association : <br> ressources humaines, gestion financière, suivi administratif et juridique.
       </p>
     </section>
 
@@ -47,8 +47,9 @@
     <section class="equipe">
       <h2>L’équipe</h2>
       <p>
-        L’équipe est composée de professionnels qualifiés, au service des salariés et du bon fonctionnement de la structure :
+        L’équipe est composée de professionnels qualifiés, au service des salariés <br> et du bon fonctionnement de la structure :
       </p>
+      <br>
       <ul>
         <li>Responsable administratif</li>
         <li>Assistants de gestion</li>
