--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
         </div>
     </section>
 
+    <!-- Section E-boutique -->
+    <section class="eboutique">
+        <div class="container">
+            <h2>Notre e-boutique</h2>
+            <img src="" alt="QR code de la e-boutique">
+        </div>
+    </section>
+
     <!-- Section Services -->
     <section class="services">
         <div class="container">
