Remplissage de la page pôle social

--- a/administratif.html
+++ b/administratif.html
@@ -15,10 +15,10 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="#">Accueil</a></li>
-                        <li><a href="#">L'Association</a></li>
-                        <li><a href="#">Nos Services</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="association.html">L'Association</a></li>
+                        <li><a href="index.html">Nos Services</a></li>
+                        <li><a href="index.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
