--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="#">Accueil</a></li>
-                    <li><a href="#">L'Association</a></li>
+                    <li><a href="association.html" class="active">L'Association</a></li>
                     <li><a href="#">Nos Services</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -74,7 +74,7 @@
                         Divers professionnels qualifiés composent ce service.
                     </p>
                     <div class="btn-wrapper">
-                        <a href="Services/administratif.html" class="btn">Plus d'infos</a>
+                        <a href="administratif.html" class="btn">Plus d'infos</a>
                     </div>
                 </div>
                 
@@ -95,7 +95,7 @@
                         </ul>
                     </p>
                     <div class="btn-wrapper">
-                        <a href="Services/social.html" class="btn">Plus d'infos</a>
+                        <a href="social.html" class="btn">Plus d'infos</a>
                     </div>
                 </div>
                 <div class="service">
@@ -118,7 +118,7 @@
                         <br>
                     </p>
                     <div class="btn-wrapper">
-                        <a href="Services/travail.html" class="btn">Plus d'infos</a>
+                        <a href="travail.html" class="btn">Plus d'infos</a>
                     </div>
                 </div>
             </div>
