Remplissage de la page pôle travail

--- a/social.html
+++ b/social.html
@@ -26,7 +26,7 @@
   </header>
 
   <!-- Section d’introduction -->
-  <section class="hero-small">
+  <section class="hero-social">
     <div class="container">
       <h1>Pôle Social</h1>
       <p>Accompagner, orienter et soutenir les personnes en situation de handicap.</p>
