Réglage de padding

--- a/travail.html
+++ b/travail.html
@@ -28,7 +28,7 @@
   <!-- Section Héro -->
   <section class="hero-travail">
     <div class="container">
-      <h1>Le Pôle Travail</h1>
+      <h1>Pôle Travail</h1>
       <p>Un accompagnement vers l'autonomie et l'insertion professionnelle</p>
     </div>
   </section>
@@ -73,6 +73,10 @@
       </p>
     </div>
   </section>
+
+  <footer>
+    <p>&copy; 2025 APATPH - Tous droits réservés</p>
+  </footer>
 
 </body>
 </html>
