Problème de menu de navigation réglé

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Accueil</a></li>
+                    <li><a href="#" class="active">Accueil</a></li>
                     <li><a href="association.html" class="active">L'Association</a></li>
-                    <li><a href="#">Nos Services</a></li>
+                    <li><a href="#services">Nos Services</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -65,7 +65,7 @@
     </section>
 
     <!-- Section Services -->
-    <section class="services">
+    <section id="services" class="services">
         <div class="container">
             <h2>Nos services</h2>
             <div class="service-grid">
