--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="#" class="active">Accueil</a></li>
                     <li><a href="association.html" class="active">L'Association</a></li>
                     <li><a href="#services">Nos Services</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -131,7 +131,7 @@
     </section>
 
     <!-- Section Contact -->
-    <section class="contact">
+    <section id="contact" class="contact">
         <div class="container">
             <h2>Contactez-nous</h2>
             <p>Email : association@apatph.fr</p>
