Intégration des implantations

--- a/index.html
+++ b/index.html
@@ -130,6 +130,50 @@
         </div>
     </section>
 
+    <section class="implantations">
+        <div class="container">
+          <h2>Nos implantations 2025</h2>
+          <div class="implantation">
+            <h3>Lavilledieu</h3>
+            <ul>
+                <li>Siège social</li>
+                <li>Entreprise Adaptée</li>
+                <li>Etablissement et Service d'Aide par le Travail</li>
+                <li>Service d'Accompagnement à la Vie Sociale</li>
+            </ul>
+          </div>
+          <div class="implantation">
+            <h3>Privas</h3>
+            <ul>
+                <li>Service d'Accompagnement à la Vie Sociale</li>
+                <li>Résidence d'Accueil</li>
+            </ul>
+          </div>
+          <div class="implantation">
+            <h3>Coucouron</h3>
+            <ul>
+                <li>Etablissement et Service d'Aide par le Travail</li>
+                <li>Entreprise Adaptée</li>
+                <li>Service d'Accompagnement à la Vie Sociale</li>
+                <li>Résidence d'Accueil</li>
+            </ul>
+          </div>
+          <div class="implantation">
+            <h3>Aubenas</h3>
+            <ul>
+                <li>Pôle Administratif</li>
+                <li>Logement en location</li>
+            </ul>
+          </div>
+          <div class="implantation">
+            <h3>Annonnay</h3>
+            <ul>
+                <li>Service d'Accompagnement à la Vie Sociale</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+               
     <!-- Section Contact -->
     <section id="contact" class="contact">
         <div class="container">
