Ajout d'un sas pour entrer dans le site et ajout d'un fade-in pour les pages des services

--- a/administratif.html
+++ b/administratif.html
@@ -28,13 +28,13 @@
   <main class="container pole-admin">
     <h1>Pôle Administratif</h1>
 
-    <section class="intro">
+    <section class="intro fade-in">
       <p>
         Le Pôle Administratif assure la gestion quotidienne de l’association : <br> ressources humaines, gestion financière, suivi administratif et juridique.
       </p>
     </section>
 
-    <section class="missions">
+    <section class="missions fade-in">
       <h2>Missions principales</h2>
       <ul>
         <li>Suivi des dossiers du personnel</li>
@@ -44,7 +44,7 @@
       </ul>
     </section>
 
-    <section class="equipe">
+    <section class="equipe fade-in">
       <h2>L’équipe</h2>
       <p>
         L’équipe est composée de professionnels qualifiés, au service des salariés <br> et du bon fonctionnement de la structure :
@@ -58,6 +58,8 @@
       </ul>
     </section>
   </main>
+
+  <script src="animation.js"></script>
 
   <footer>
     <p>&copy; 2025 APATPH – Tous droits réservés</p>
