--- a/social.html
+++ b/social.html
@@ -25,7 +25,7 @@
     </header>
 
   <!-- Section d’introduction -->
-  <section class="hero-social">
+  <section class="hero-social fade-in">
     <div class="container">
       <h1>Pôle Social</h1>
       <p>Accompagner, orienter et soutenir les personnes en situation de handicap.</p>
@@ -33,7 +33,7 @@
   </section>
 
   <!-- Présentation -->
-  <section class="social-intro">
+  <section class="social-intro fade-in">
     <div class="container">
       <h2>Nos missions</h2>
       <br>
@@ -44,7 +44,7 @@
   </section>
 
   <!-- Services -->
-  <section class="social-services">
+  <section class="social-services fade-in">
     <div class="container">
       <h2>Nos services</h2>
       <div class="service-grid">
@@ -65,7 +65,7 @@
   </section>
 
   <!-- Équipe -->
-  <section class="social-team">
+  <section class="social-team fade-in">
     <div class="container">
       <h2>Notre équipe</h2>
       <p>
@@ -73,6 +73,8 @@
       </p>
     </div>
   </section>
+
+  <script src="animation.js"></script>
 
   <footer>
     <p>&copy; 2025 APATPH - Tous droits réservés</p>
