--- a/travail.html
+++ b/travail.html
@@ -34,7 +34,7 @@
   </section>
 
   <!-- Section Introduction -->
-  <section class="travail-intro">
+  <section class="travail-intro fade-in">
     <div class="container">
       <h2>Notre mission</h2>
       <p>
@@ -44,7 +44,7 @@
   </section>
 
   <!-- Section Activités -->
-  <section class="travail-activites">
+  <section class="travail-activites fade-in">
     <div class="container">
       <h2>Nos activités</h2>
       <div class="activite-grid">
@@ -65,7 +65,7 @@
   </section>
 
   <!-- Section Équipe -->
-  <section class="travail-equipe">
+  <section class="travail-equipe fade-in">
     <div class="container">
       <h2>Notre équipe</h2>
       <p>
@@ -78,5 +78,7 @@
     <p>&copy; 2025 APATPH - Tous droits réservés</p>
   </footer>
 
+  <script src="animation.js"></script>
+  
 </body>
 </html>
