Modification du mail en ajoutant un bouton avec message préfait

--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
     <section id="contact" class="contact">
         <div class="container">
             <h2>Contactez-nous</h2>
-            <p>Email : association@apatph.fr</p>
+            <a href="mailto:association@apatph.fr?subject=Demande%20d'informations&body=Bonjour%2C%0A%0AJ'aimerais obtenir plus d'informations sur l'association.%0A%0ACordialement," class="btn-mail">
+                Envoyer un e-mail
+            </a>
             <p>Téléphone : 04 75 94 74 63</p>
             <p>Adresse : 07170 Lavilledieu</p>
         </div>
@@ -218,8 +220,6 @@
           });
         });
       </script>
-      
-      
 
 </body>
 </html>
