Modification du texte et du visuel de la page de présentation de l'association

--- a/association.html
+++ b/association.html
@@ -26,49 +26,79 @@
   </header>
 
   <main>
-    <section class="hero">
-      <div class="container">
-        <h1>L'Association</h1>
-        <p>Association pour l'Accueil et le Travail des Personnes Handicapées</p>
-      </div>
-    </section>
 
     <section class="presentation">
       <div class="container">
-        <h2>Notre mission</h2>
+        <h1>L'Association</h1>
         <p>
-          L’APATPH est une association loi 1901 à but non lucratif, créée en 1982. Elle a pour vocation l’accueil, l’accompagnement et l’insertion professionnelle des personnes en situation de handicap.
+          L'association Pour l'Accueil et le Travail des Personnes Handicapées abrégée 
+          A.P.A.T.P.H., portant le slogan
         </p>
       </div>
     </section>
 
-    <section class="values">
+    <section class="presentation2">
       <div class="container">
-        <h2>Nos valeurs</h2>
-        <ul>
-          <li><strong>Respect :</strong> Chaque personne est accueillie avec dignité et bienveillance.</li>
-          <li><strong>Engagement :</strong> Nous nous investissons pleinement pour favoriser l’autonomie de chacun.</li>
-          <li><strong>Solidarité :</strong> Le travail en équipe et l’entraide sont au cœur de notre action.</li>
-        </ul>
-      </div>
-    </section>
-
-    <section class="history">
-      <div class="container">
-        <h2>Historique</h2>
         <p>
-          Depuis sa création en 1982, l’APATPH n’a cessé de développer ses activités pour répondre aux besoins des personnes en situation de handicap. Aujourd’hui, elle gère plusieurs établissements et services adaptés.
+          <strong>"L'engagement au service des personnes en situation de handicap"</strong>
+        </p>
+        <p>
+          est une association à but non lucrative fondée en 1988 et reconnue d'utilité publique
+          depuis 2008.
+        </p>
+        <p>
+          Elle est dédiée à l'accompagnement et au soutien des personnes en situation de handicap.
+        </p>
+        <p>
+          L'association est active principalement en Ardèche, dans la région Auvergne-Rhône-Alpes,
+          et s'efforce de garantir l'accès aux droits fondamentaux des personnes handicapées.
+          Elle rassemble des professionnels, des bénévoles, des familles, et même des travailleurs
+          handicapés pour défendre les droits et améliorer la qualité de vie des personnes en situation
+          de handicap.
+        </p>
+        <p>
+          Son siège social est fixé au <strong>310 chemin des Roquelles 07170 LAVILLEDIEU</strong>.
+        </p>
+        <p>
+          Le pôle administratif est fixé au <strong>8 chemin des Bastides 07200 AUBENAS</strong>.
+        </p>
+        <p>
+          Elle rassemble les personnes handicapées, les aidants familiaux ou non, les professionnels
+          ainsi que tout individu et entités souhaitant contribuer activement à l'assistance et au 
+          soutien des personnes handicapées.
         </p>
       </div>
     </section>
 
-    <section class="contact-info">
+    <section class="objectifs">
       <div class="container">
-        <h2>Contact</h2>
+        <h2>Objectifs et Moyens de l'Association</h2>
         <p>
-          📍 310 chemin des Roquelles, 07170 Lavilledieu<br>
-          📞 04 75 94 74 63<br>
-          ✉️ association@apatph.fr
+          Rassembler, aider et soutenir les personnes en situation de handicap et leur famille en
+          les accueillant dans nos services de travail, de logement ou bien de suivi social.
+        </p>
+        <p>
+          Œuvrer pour les personnes atteintes de handicap. L'association doit tout mettre en œuvre 
+          pour la défense morale et matérielle des personnes handicapées.
+        </p>
+        <p>
+          Assurer le respect des droits des personnes handicapées tout au long de leur accompagnement
+          ou de leur prise en charge : respect de la dignité, de l'intégrité, de la vie privée, de leur
+          intimité et de leur sécurité. L'association doit veiller à la participation directe de la 
+          personne handicapée à la conception ou à la mise en œuvre du projet d'accueil personnalisé dans 
+          le respect de son projet individuel.
+        </p>
+        <p>
+          Améliorer la continuité et la cohérence des parcours de vie des personnes handicapées en 
+          développant des modes d'accompagnement adaptés à leurs besoins et à leur projet dans le secteur
+          médico-social et le système de santé.
+        </p>
+        <p>
+          Assurer une accessibilité optimale de l'offre d'accompagnement grâce à un maillage territorial 
+          harmonisé des structures de proximité.
+        </p>
+        <p>
+          Développer une culture de la bienveillance.
         </p>
       </div>
     </section>
