Correction d'une faute de grammaire, lucrative en lucratif

--- a/association.html
+++ b/association.html
@@ -43,7 +43,7 @@
           <strong>"L'engagement au service des personnes en situation de handicap"</strong>
         </p>
         <p>
-          est une association à but non lucrative fondée en 1988 et reconnue d'utilité publique
+          est une association à but non lucratif fondée en 1988 et reconnue d'utilité publique
           depuis 2008.
         </p>
         <p>
